_K8S/1_depl-commands.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-commands-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice-d
  template:
    metadata:
      labels:
        app: commandservice-d
    spec:
      containers:
      - name: commandservice-d
        image: ahsansoftengineer/commandservice-d
        ports:
          - containerPort: 8401
---
apiVersion: v1
kind: Service
metadata:
  name: srvc-clusterip-commands
spec:
  type: ClusterIP
  selector:
    app: commandservice-d
  ports:
  - name: commandservice
    protocol: TCP
    port: 8401
    targetPort: 8401
    # nodePort: 30841 # 30000-32767 (Host Port)
