_K8S/2_srvc-np-commands.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvc-np-commands-d
spec:
  type: NodePort
  selector:
    app: commandservice-d
  ports:
    - name: commandservice-d
      protocol: TCP
      port: 8401
      targetPort: 8401
      nodePort: 30841
