_K8S/2_srvc-np-platforms.yaml
apiVersion: v1
kind: Service
metadata:
  name: srvc-np-platforms-d
spec:
  type: NodePort
  selector:
    app: platformservice-d
  ports:
    - name: platformservice-d
      protocol: TCP
      port: 5401 # Cluster Port
      targetPort: 5401 # Pod's App port
      nodePort: 30541 # Host Access (Windows) Range 30000-32767
