_K8S/3_srvc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: srvc-ingress
  annotations:
    # kubernetes.io/ingress.class: nginx # ingressClassName
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/rewrite-target: /$1 # Rewrite target for matched paths
spec:
  ingressClassName: nginx
  rules:
  - host: ahsan.com
    http:
      paths:
      - path: /api/platform
        pathType: Prefix
        backend:
          service:
            name: srvc-clusterip-platforms # Cluster IP
            port:
              number: 5401
      - path: /api/c/platforms
        pathType: Prefix
        backend:
          service:
            name: srvc-clusterip-commands # Cluster IP
            port:
              number: 8401
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: srvc-clusterip-platforms
            port:
              number: 5401
